<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="Home" />
        <item
            android:id="@+id/cronometro"
            android:icon="@drawable/cronografo"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/reproductor"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/fragment1"
            android:icon="@drawable/ic_baseline_add_business_24"
            android:title="@string/menu_casa" />
        <item
            android:id="@+id/fragment2"
            android:icon="@drawable/calamar"
            android:title="@string/menu_marino" />
        <item
            android:id="@+id/fragment3"
            android:icon="@drawable/calculadora"
            android:title="@string/menu_calculadora" />


    </group>
</menu>